# aidlc-workflows

.github/workflows/: security-scanners.yml
scripts/aidlc-evaluator/: pyproject.toml
scripts/aidlc-traceability/: LEGAL_DISCLAIMER.md  LICENSE  README.md  pyproject.toml
scripts/aidlc-traceability/docs/: ai-compliance.md  ai-security.md  architecture.md  bedrock-security.md  security-design.md  shared-responsibility.md  threat-model.md
scripts/aidlc-traceability/docs/security-scan-results/: ATTESTATION.md  SECURITY_AUDIT_REPORT.md  SECURITY_EXECUTIVE_SUMMARY.md  scan-metadata.json
scripts/aidlc-traceability/requirements/: IMPLEMENTATION-NOTES.md  PR-FAQ.md  README.md  technical-environment-traceability-matrix-tool.md  vision-traceability-matrix-tool.md
scripts/aidlc-traceability/src/traceability/: __init__.py  agent.py  analysis.py  cli.py  discovery.py  graph.py  models.py  pipeline.py
scripts/aidlc-traceability/src/traceability/generators/: __init__.py  html.py  markdown.py
scripts/aidlc-traceability/src/traceability/parsers/: __init__.py  code.py  code_plans.py  components.py  linker.py  requirements.py  stories.py  units.py
scripts/aidlc-traceability/tests/: conftest.py  test_cli_pipeline.py  test_discovery.py  test_generators.py  test_graph.py  test_models.py  test_parsers.py
